--- a/index.html
+++ b/index.html
@@ -1,10 +1,81 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>My GitHub Pages Site</title>
-  </head>
-  <body>
-    <h1>Hello world!</h1>
-    <p>Welcome to my GitHub Pages site!</p>
-  </body>
+<head>
+	<title>Thomas Beaney</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<style>
+		body {
+			font-family: Arial, sans-serif;
+			margin: 0;
+			padding: 0;
+			background-color: #f2f2f2;
+		}
+		header {
+			background-color: #005082;
+			color: #fff;
+			padding: 20px;
+			text-align: center;
+		}
+		h1 {
+			margin: 0;
+			font-size: 36px;
+			font-weight: normal;
+		}
+		nav {
+			background-color: #f2f2f2;
+			border-bottom: 1px solid #ddd;
+			padding: 10px;
+			text-align: center;
+		}
+		nav a {
+			color: #333;
+			text-decoration: none;
+			padding: 10px 20px;
+		}
+		nav a:hover {
+			background-color: #ddd;
+		}
+		.container {
+			max-width: 960px;
+			margin: 0 auto;
+			padding: 20px;
+		}
+		section {
+			background-color: #fff;
+			padding: 20px;
+			margin-bottom: 20px;
+		}
+		section h2 {
+			margin-top: 0;
+			font-size: 24px;
+			font-weight: normal;
+		}
+	</style>
+</head>
+<body>
+	<header>
+		<h1>Thomas Beaney</h1>
+		<p>Clinician and Researcher</p>
+	</header>
+	<nav>
+		<a href="#background">Background</a>
+		<a href="#cv">CV</a>
+		<a href="#projects">Projects</a>
+	</nav>
+	<div class="container">
+		<section id="about">
+			<h2>About me</h2>
+			<p>I am a General Practitioner and researcher based at Imperial College London, working on multimorbidity.</p>
+		</section>
+		<section id="cv">
+			<h2>CV</h2>
+			<p>CV will appear here</p>
+		</section>
+		<section id="projects">
+			<h2>Current Projects</h2>
+			<p>Current projects.</p>
+		</section>
+	</div>
+</body>
 </html>
