--- a/index.html
+++ b/index.html
@@ -1,91 +1,61 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8" />
 	<title>Thomas Beaney</title>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<style>
-		body {
-			font-family: Arial, sans-serif;
-			margin: 0;
-			padding: 0;
-			background-color: #f2f2f2;
-		}
-		header {
-			background-color: #005082;
-			color: #fff;
-			padding: 20px;
-			text-align: center;
-		}
-		h1 {
-			margin: 0;
-			font-size: 36px;
-			font-weight: normal;
-		}
-		nav {
-			background-color: #f2f2f2;
-			border-bottom: 1px solid #ddd;
-			padding: 10px;
-			text-align: center;
-		}
-		nav a {
-			color: #333;
-			text-decoration: none;
-			padding: 10px 20px;
-		}
-		nav a:hover {
-			background-color: #ddd;
-		}
-		.container {
-			max-width: 960px;
-			margin: 0 auto;
-			padding: 20px;
-		}
-		section {
-			background-color: #fff;
-			padding: 20px;
-			margin-bottom: 20px;
-		}
-		section h2 {
-			margin-top: 0;
-			font-size: 24px;
-			font-weight: normal;
-		}
-	</style>
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Playfair+Display&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="v1-stylesheet.css">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
-<body>
-	<header>
-		<h1>Thomas Beaney</h1>
-		<p>Academic GP</p>
-	</header>
-	<nav>
-		<a href="#background">Background</a>
-		<a href="#cv">CV</a>
-		<a href="#projects">Projects</a>
-	</nav>
-	<div class="container">
-		<section id="about">
-			<h2>About me</h2>
-			<p>I am a General Practitioner working within the NHS and an academic based at Imperial College London. I have diverse range of research interests, from
-			hypertension and global health research, to applications of machine learning methods to understanding the connections between diseases. I am currently completing a clinical PhD funded
-			by the Wellcome Trust exploring patterns of multimorbidity (having two or more long-term conditions at the same time) and whether groups or "clusters" of people with similar
-			diseases have similarities in how they use healthcare services.</p>
-		</section>
-		<section id="cv">
-			<h2>CV</h2>
-			<p>CV will appear here</p>
-		</section>
+
+	<body class='markdown-preview' data-use-github-style style="max-width: 1000px;margin: auto;">
+		<header>
+			<h1 style="text-align:center;font-size:50px; margin: 0px;">Thomas Beaney</h1>
+			<h3 style="text-align:center; margin: 0px;  padding-bottom:2%;">
+				<a style="color:black; padding-right:1%;padding-left:1%;text-decoration: none;" href="index.html">Home</a>
+				<a style="color:black; padding-right:1%;padding-left:1%;text-decoration: none;" href=#projects>Projects</a>
+				<a style="color:black; padding-right:1%;padding-left:1%;text-decoration: none;" href=#cv>CV</a> </h3>
+		</header>
+		<p style="text-align:center; padding-top:2%;margin:0px;"><img src="TB_photo.jpeg" alt="Thomas Beaney" style="width:200px;" /></p>
+		<h4 style="text-align:center;margin: 0px;">Thomas Beaney</h4>
+		<p style="text-align:center;margin: 0px;"> Academic GP
+		<p style="text-align:center;margin: 0px;">Imperial College London</p>
+		<p style="text-align:center; margin: 0px;padding-bottom: 2%">
+			<a style="padding-left:1%;padding-right:1%" href="mailto:thomas.beaney@imperial.ac.uk" target="_blank"><i class="material-icons" style="height:22px;vertical-align:middle">&#xe0be;</i></a>
+			<a style="padding-left:1%;padding-right:1%" href="https://twitter.com/drtombeaney" target="_blank"><img src="twitter-logo.png" alt="Twitter" style="height:20px;vertical-align:middle"></a>
+			<a style="padding-left:1%;padding-right:1%" href="https://www.linkedin.com/in/thomas-beaney-72388893" target="_blank"><img src="LI-logo.png" alt="Twitter" style="height:20px;vertical-align:middle"></a>
+
+		</p>
+		I am a General Practitioner working within the NHS and an academic based at Imperial College London. I have diverse range of research interests, from
+		hypertension and global health research, to applications of machine learning methods to understanding the connections between diseases. I am currently completing a clinical PhD funded
+		by the Wellcome Trust exploring patterns of multimorbidity (having two or more long-term conditions at the same time) and whether groups or "clusters" of people with similar
+		diseases have similarities in how they use healthcare services.</p>
+
 		<section id="projects">
 			<h2>Current Projects</h2>
 			<h3>Characterising clusters of multimorbidity</h3>
 			<p>My PhD is exploring clusters of diseases and patients based on similarities between the occurrence of diseases in people.</p>
 			<h3>May Measurement Month</h3>
-			<p>I am a Trustee and Lead Statistician for the May Measurement Month global blood pressure screening campaign. The campaign started in 2017 and has screened over 5 million people
-			worldwide, detecting over 1 million cases of raised blood pressure.</p>
+			<p>
+				I am a Trustee and Lead Statistician for the May Measurement Month global blood pressure screening campaign. The campaign started in 2017 and has screened over 5 million people
+				worldwide, detecting over 1 million cases of raised blood pressure.
+			</p>
 			<h3>Digital health research</h3>
-			<p>In 2021-2023 I worked on an evaluation of the impact of COVID oximetry @home, an NHS programme which provided people at high risk of complications from COVID-19 with
-			a portable pulse oximeter to monitor their oxygen levels at home. I also worked on an evaluation of the impact of remote consultations in primary and secondary care in London during the pandemic.</p>
+			<p>
+				In 2021-2023 I worked on an evaluation of the impact of COVID oximetry @home, an NHS programme which provided people at high risk of complications from COVID-19 with
+				a portable pulse oximeter to monitor their oxygen levels at home. I also worked on an evaluation of the impact of remote consultations in primary and secondary care in London during the pandemic.
+			</p>
 		</section>
-	</div>
+
+		<section id="cv">
+			<h2>CV</h2>
+			<p>CV will appear here</p>
+		</section>
+
+		<p>
+			<a class="twitter-timeline" data-height="1000" data-theme="light" href="https://twitter.com/drtombeaney?ref_src=twsrc%5Etfw">Tweets by drtombeaney</a>
+			<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+		</p>
 </body>
 </html>
