--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 	<body class='markdown-preview' data-use-github-style style="max-width: 1000px;margin: auto;">
 		<header>
-			<h1 style="text-align:center;font-size:50px; margin: 0px;">Thomas Beaney</h1>
-			<h3 style="text-align:center; margin: 0px;  padding-bottom:2%;">
+			<h1 style="text-align: center; font-size: 50px; margin: 0px; padding-top: 2%; background-color: white; ">Thomas Beaney</h1>
+			<h3 style="text-align: center; margin: 0px; padding-bottom: 2%; padding-top: 2%; background-color: white; ">
 				<a style="color:black; padding-right:1%;padding-left:1%;text-decoration: none;" href="index.html">Home</a>
 				<a style="color:black; padding-right:1%;padding-left:1%;text-decoration: none;" href=#projects>Projects</a>
 				<a style="color:black; padding-right:1%;padding-left:1%;text-decoration: none;" href=#cv>CV</a> </h3>
