--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 			<a style="padding-left:1%;padding-right:1%" href="mailto:thomas.beaney@imperial.ac.uk" target="_blank"><i class="material-icons" style="height:22px;vertical-align:middle">&#xe0be;</i></a>
 			<a style="padding-left:1%;padding-right:1%" href="https://twitter.com/drtombeaney" target="_blank"><img src="twitter-logo.png" alt="Twitter" style="height:20px;vertical-align:middle"></a>
 			<a style="padding-left:1%;padding-right:1%" href="https://www.linkedin.com/in/thomas-beaney-72388893" target="_blank"><img src="LI-logo.png" alt="Twitter" style="height:20px;vertical-align:middle"></a>
+			<a style="padding-left:1%;padding-right:1%" href="https://github.com/tbeaney" target="_blank"><img src="github-mark.png" alt="Twitter" style="height:20px;vertical-align:middle"></a>
 
 		</p>
 		I am a General Practitioner working within the NHS and an academic based at Imperial College London. I have diverse range of research interests, from
@@ -35,11 +36,15 @@
 		<section id="projects">
 			<h2>Current Projects</h2>
 			<h3>Characterising clusters of multimorbidity</h3>
-			<p>My PhD is exploring clusters of diseases and patients based on similarities between the occurrence of diseases in people.</p>
+			<p>
+				My PhD aims to explore clusters of similar diseases and people with similar diseases based on the co-occurrence of diseases in one person.
+				More information on the research for my PhD can be found <a href="https://tbeaney.github.io/MMclustering">here</a>.
+			</p>
 			<h3>May Measurement Month</h3>
 			<p>
-				I am a Trustee and Lead Statistician for the May Measurement Month global blood pressure screening campaign. The campaign started in 2017 and has screened over 5 million people
-				worldwide, detecting over 1 million cases of raised blood pressure.
+				I am a Trustee and Lead Statistician for the May Measurement Month global blood pressure screening campaign.
+				The campaign started in 2017 and has screened over 5 million people worldwide, detecting over 1 million cases of raised blood pressure.
+				More information on the campagin can be found <a href="https://maymeasure.org"> here</a>.
 			</p>
 			<h3>Digital health research</h3>
 			<p>
