--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<h3 style="text-align: center; margin: 0px; padding-bottom: 2%; padding-top: 2%; background-color: white; ">
 				<a style="color:black; padding-right:1%;padding-left:1%;text-decoration: none;" href="index.html">Home</a>
 				<a style="color:black; padding-right:1%;padding-left:1%;text-decoration: none;" href=#projects>Projects</a>
-				<a style="color:black; padding-right:1%;padding-left:1%;text-decoration: none;" href=#cv>CV</a> </h3>
+				<a style="color:black; padding-right:1%;padding-left:1%;text-decoration: none;" href="cv.html">CV</a> </h3>
 		</header>
 		<p style="text-align:center; padding-top:2%;margin:0px;"><img src="TB_photo.jpeg" alt="Thomas Beaney" style="width:200px;" /></p>
 		<h4 style="text-align:center;margin: 0px;">Thomas Beaney</h4>
@@ -28,34 +28,29 @@
 			<a style="padding-left:1%;padding-right:1%" href="https://github.com/tbeaney" target="_blank"><img src="github-mark.png" alt="Twitter" style="height:20px;vertical-align:middle"></a>
 
 		</p>
-		I am a General Practitioner working within the NHS and an academic based at Imperial College London. I have diverse range of research interests, from
-		hypertension and global health research, to applications of machine learning methods to understanding the connections between diseases. I am currently completing a clinical PhD funded
-		by the Wellcome Trust exploring patterns of multimorbidity (having two or more long-term conditions at the same time) and whether groups or "clusters" of people with similar
-		diseases have similarities in how they use healthcare services.</p>
+		I am a GP working in the NHS and an academic based at Imperial College London.
+		I have diverse range of research interests, including hypertension, global and public health and health services research.
+		I am currently completing a clinical PhD  at Imperial College funded by the Wellcome Trust exploring patterns of multimorbidity (having two or more long-term conditions at the same time) and whether groups or "clusters" of people with similar
+		diseases have similarities in how they interact with healthcare services.</p>
 
 		<section id="projects">
 			<h2>Current Projects</h2>
 			<h3>Characterising clusters of multimorbidity</h3>
 			<p>
-				My PhD aims to explore clusters of similar diseases and people with similar diseases based on the co-occurrence of diseases in one person.
-				More information on the research for my PhD can be found <a href="https://tbeaney.github.io/MMclustering">here</a>.
+				My PhD aims to explore clusters of similar diseases and people with similar diseases based on the co-occurrence of diseases in one person, and associations with clinical outcomes and healthcare utilisation.
+				More information on my PhD research can be found <a href="https://tbeaney.github.io/MMclustering">here</a>.
 			</p>
 			<h3>May Measurement Month</h3>
 			<p>
 				I am a Trustee and Lead Statistician for the May Measurement Month global blood pressure screening campaign.
 				The campaign started in 2017 and has screened over 5 million people worldwide, detecting over 1 million cases of raised blood pressure.
-				More information on the campagin can be found <a href="https://maymeasure.org"> here</a>.
+				More information on the campaign can be found <a href="https://maymeasure.org"> here</a>.
 			</p>
 			<h3>Digital health research</h3>
 			<p>
-				In 2021-2023 I worked on an evaluation of the impact of COVID oximetry @home, an NHS programme which provided people at high risk of complications from COVID-19 with
-				a portable pulse oximeter to monitor their oxygen levels at home. I also worked on an evaluation of the impact of remote consultations in primary and secondary care in London during the pandemic.
+				In 2021-2023 I worked on an evaluation of the impact of COVID oximetry @home, an NHS programme which provided people at high risk of complications from COVID-19 with a portable pulse oximeter to monitor their oxygen levels at home.
+				I also worked on an evaluation of the impact of remote consultations in primary and secondary care in London during the pandemic.
 			</p>
-		</section>
-
-		<section id="cv">
-			<h2>CV</h2>
-			<p>CV will appear here</p>
 		</section>
 
 		<p>
