--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 			<h3 style="text-align: center; margin: 0px; padding-bottom: 2%; padding-top: 2%; background-color: white; ">
 				<a style="color:black; padding-right:1%;padding-left:1%;text-decoration: none;" href="index.html">Home</a>
 				<a style="color:black; padding-right:1%;padding-left:1%;text-decoration: none;" href=#projects>Projects</a>
-				<a style="color:black; padding-right:1%;padding-left:1%;text-decoration: none;" href="cv.html">CV</a> </h3>
+				<a style="color:black; padding-right:1%;padding-left:1%;text-decoration: none;" href="cv/CV_TBEANEY.html">CV</a> </h3>
 		</header>
-		<p style="text-align:center; padding-top:2%;margin:0px;"><img src="TB_photo.jpeg" alt="Thomas Beaney" style="width:200px;" /></p>
+		<p style="text-align:center; padding-top:2%;margin:0px;"><img src="images/TB_photo.jpeg" alt="Thomas Beaney" style="width:200px;" /></p>
 		<h4 style="text-align:center;margin: 0px;">Thomas Beaney</h4>
 		<p style="text-align:center;margin: 0px;"> Academic GP
 		<p style="text-align:center;margin: 0px;">Imperial College London</p>
 		<p style="text-align:center; margin: 0px;padding-bottom: 2%">
 			<a style="padding-left:1%;padding-right:1%" href="mailto:thomas.beaney@imperial.ac.uk" target="_blank"><i class="material-icons" style="height:22px;vertical-align:middle">&#xe0be;</i></a>
-			<a style="padding-left:1%;padding-right:1%" href="https://twitter.com/drtombeaney" target="_blank"><img src="twitter-logo.png" alt="Twitter" style="height:20px;vertical-align:middle"></a>
-			<a style="padding-left:1%;padding-right:1%" href="https://www.linkedin.com/in/thomas-beaney-72388893" target="_blank"><img src="LI-logo.png" alt="Twitter" style="height:20px;vertical-align:middle"></a>
-			<a style="padding-left:1%;padding-right:1%" href="https://github.com/tbeaney" target="_blank"><img src="github-mark.png" alt="Twitter" style="height:20px;vertical-align:middle"></a>
+			<a style="padding-left:1%;padding-right:1%" href="https://twitter.com/drtombeaney" target="_blank"><img src="images/twitter-logo.png" alt="Twitter" style="height:20px;vertical-align:middle"></a>
+			<a style="padding-left:1%;padding-right:1%" href="https://www.linkedin.com/in/thomas-beaney-72388893" target="_blank"><img src="images/LI-logo.png" alt="Twitter" style="height:20px;vertical-align:middle"></a>
+			<a style="padding-left:1%;padding-right:1%" href="https://github.com/tbeaney" target="_blank"><img src="images/github-mark.png" alt="Twitter" style="height:20px;vertical-align:middle"></a>
 
 		</p>
 		I am a GP working in the NHS and an academic based at Imperial College London.
