--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 		<p style="text-align:center; margin: 0px;padding-bottom: 2%">
 			<a style="padding-left:1%;padding-right:1%" href="mailto:thomas.beaney@imperial.ac.uk" target="_blank"><i class="material-icons" style="height:22px;vertical-align:middle">&#xe0be;</i></a>
 			<a style="padding-left:1%;padding-right:1%" href="https://twitter.com/drtombeaney" target="_blank"><img src="images/twitter-logo.png" alt="Twitter" style="height:20px;vertical-align:middle"></a>
-			<a style="padding-left:1%;padding-right:1%" href="https://www.linkedin.com/in/thomas-beaney-72388893" target="_blank"><img src="images/LI-logo.png" alt="Twitter" style="height:20px;vertical-align:middle"></a>
-			<a style="padding-left:1%;padding-right:1%" href="https://github.com/tbeaney" target="_blank"><img src="images/github-mark.png" alt="Twitter" style="height:20px;vertical-align:middle"></a>
+			<a style="padding-left:1%;padding-right:1%" href="https://www.linkedin.com/in/thomas-beaney-72388893" target="_blank"><img src="images/LI-logo.png" alt="LinkedIn" style="height:20px;vertical-align:middle"></a>
+			<a style="padding-left:1%;padding-right:1%" href="https://github.com/tbeaney" target="_blank"><img src="images/github-mark.png" alt="GitHub" style="height:20px;vertical-align:middle"></a>
+			<a style="padding-left:1%;padding-right:1%" href="https://orcid.org/0000-0001-9709-7264" target="_blank"><img src="images/ORCIDiD_icon64x64.png" alt="Orcid" style="height:20px;vertical-align:middle"></a>
 
 		</p>
 		I am a GP working in the NHS and an academic based at Imperial College London.
