--- a/index.html
+++ b/index.html
@@ -9,54 +9,87 @@
 
 </head>
 
-	<body class='markdown-preview' data-use-github-style style="max-width: 1000px;margin: auto;">
-		<header>
-			<h1 style="text-align: center; font-size: 50px; margin: 0px; padding-top: 2%; background-color: white; ">Thomas Beaney</h1>
-			<h3 style="text-align: center; margin: 0px; padding-bottom: 2%; padding-top: 2%; background-color: white; ">
-				<a style="color:black; padding-right:1%;padding-left:1%;text-decoration: none;" href="index.html">Home</a>
-				<a style="color:black; padding-right:1%;padding-left:1%;text-decoration: none;" href=#projects>Projects</a>
-				<a style="color:black; padding-right:1%;padding-left:1%;text-decoration: none;" href="cv/CV_TBEANEY.html">CV</a> </h3>
-		</header>
-		<p style="text-align:center; padding-top:2%;margin:0px;"><img src="images/TB_photo.jpeg" alt="Thomas Beaney" style="width:200px;" /></p>
-		<h4 style="text-align:center;margin: 0px;">Thomas Beaney</h4>
-		<p style="text-align:center;margin: 0px;"> Academic GP
-		<p style="text-align:center;margin: 0px;">Imperial College London</p>
-		<p style="text-align:center; margin: 0px;padding-bottom: 2%">
-			<a style="padding-left:1%;padding-right:1%" href="mailto:thomas.beaney@imperial.ac.uk" target="_blank"><i class="material-icons" style="height:22px;vertical-align:middle">&#xe0be;</i></a>
-			<a style="padding-left:1%;padding-right:1%" href="https://twitter.com/drtombeaney" target="_blank"><img src="images/twitter-logo.png" alt="Twitter" style="height:20px;vertical-align:middle"></a>
-			<a style="padding-left:1%;padding-right:1%" href="https://www.linkedin.com/in/thomas-beaney-72388893" target="_blank"><img src="images/LI-logo.png" alt="LinkedIn" style="height:20px;vertical-align:middle"></a>
-			<a style="padding-left:1%;padding-right:1%" href="https://github.com/tbeaney" target="_blank"><img src="images/github-mark.png" alt="GitHub" style="height:20px;vertical-align:middle"></a>
-			<a style="padding-left:1%;padding-right:1%" href="https://orcid.org/0000-0001-9709-7264" target="_blank"><img src="images/ORCIDiD_icon64x64.png" alt="Orcid" style="height:20px;vertical-align:middle"></a>
+<style>
+    p {
+        font-size: 20px;
+    }
 
-		</p>
-		I am a GP working in the NHS and an academic based at Imperial College London.
-		I have diverse range of research interests, including hypertension, global and public health and health services research.
-		I am currently completing a clinical PhD  at Imperial College funded by the Wellcome Trust exploring patterns of multimorbidity (having two or more long-term conditions at the same time) and whether groups or "clusters" of people with similar
-		diseases have similarities in how they interact with healthcare services.</p>
+    li {
+        font-size: 20px;
+    }
+</style>
 
-		<section id="projects">
-			<h2>Current Projects</h2>
-			<h3>Characterising clusters of multimorbidity</h3>
-			<p>
-				My PhD aims to explore clusters of similar diseases and people with similar diseases based on the co-occurrence of diseases in one person, and associations with clinical outcomes and healthcare utilisation.
-				More information on my PhD research can be found <a href="https://tbeaney.github.io/MMclustering">here</a>.
-			</p>
-			<h3>May Measurement Month</h3>
-			<p>
-				I am a Trustee and Lead Statistician for the May Measurement Month global blood pressure screening campaign.
-				The campaign started in 2017 and has screened over 5 million people worldwide, detecting over 1 million cases of raised blood pressure.
-				More information on the campaign can be found <a href="https://maymeasure.org"> here</a>.
-			</p>
-			<h3>Digital health research</h3>
-			<p>
-				In 2021-2023 I worked on an evaluation of the impact of COVID oximetry @home, an NHS programme which provided people at high risk of complications from COVID-19 with a portable pulse oximeter to monitor their oxygen levels at home.
-				I also worked on an evaluation of the impact of remote consultations in primary and secondary care in London during the pandemic.
-			</p>
-		</section>
+<body class='markdown-preview' data-use-github-style style="max-width: 1000px;margin: auto;">
+	<header>
+		<h1 style="text-align: center; font-size: 50px; margin: 0px; padding-top: 2%; background-color: white; ">Thomas Beaney</h1>
+		<h3 style="text-align: center; margin: 0px; padding-bottom: 2%; padding-top: 2%; background-color: white; ">
+			<a style="color:black; padding-right:2%;padding-left:2%;text-decoration: none;" href="index.html">Home</a>
+			<a style="color:black; padding-right:2%;padding-left:2%;text-decoration: none;" href="https://tbeaney.github.io/MMclustering/">MLTC clustering</a>
+			<a style="color:black; padding-right:2%;padding-left:2%;text-decoration: none;" href="https://maymeasure.org">May Measurement Month</a>
+		</h3>
+	</header>
+	<p style="text-align:center; padding-top:2%;margin:0px;"><img src="images/TB_photo.jpeg" alt="Thomas Beaney" style="width:200px;" /></p>
+	<h4 style="text-align:center;margin: 0px;">Thomas Beaney</h4>
+	<p style="text-align:center;margin: 0px;"> Academic GP
+	<p style="text-align:center;margin: 0px;">Imperial College London</p>
+	<p style="text-align:center; margin: 0px;padding-bottom: 2%">
+		<a style="padding-left:1%;padding-right:1%" href="mailto:thomas.beaney@imperial.ac.uk" target="_blank"><i class="material-icons" style="height:22px;vertical-align:middle">&#xe0be;</i></a>
+		<a style="padding-left:1%;padding-right:1%" href="https://twitter.com/drtombeaney" target="_blank"><img src="images/twitter-logo.png" alt="Twitter" style="height:20px;vertical-align:middle"></a>
+		<a style="padding-left:1%;padding-right:1%" href="https://www.linkedin.com/in/thomas-beaney-72388893" target="_blank"><img src="images/LI-logo.png" alt="LinkedIn" style="height:20px;vertical-align:middle"></a>
+		<a style="padding-left:1%;padding-right:1%" href="https://github.com/tbeaney" target="_blank"><img src="images/github-mark.png" alt="GitHub" style="height:20px;vertical-align:middle"></a>
+		<a style="padding-left:1%;padding-right:1%" href="https://orcid.org/0000-0001-9709-7264" target="_blank"><img src="images/ORCIDiD_icon64x64.png" alt="Orcid" style="height:20px;vertical-align:middle"></a>
 
-		<p>
-			<a class="twitter-timeline" data-height="1000" data-theme="light" href="https://twitter.com/drtombeaney?ref_src=twsrc%5Etfw">Tweets by drtombeaney</a>
-			<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-		</p>
+	</p>
+	<p>
+	I am a GP working in the NHS and a clinical academic at Imperial College London.
+	Broadly, my research focuses on two main areas:
+	</p>
+	<p>
+		<ol>
+			<li>Understanding the global burden of hypertension and Multiple Long-Term Conditions (MLTC) and developing strategies to improve care for people with these conditions.</li>
+			<li>Evaluating the use of AI and digital health tools for improving healthcare delivery.</li>
+		</ol>
+	</p>
+
+	<p>
+		In my research, I draw on my experience as a practicing primary care physician, and my expertise in quantitative research,
+		including the analysis of large health datasets using both epidemiological and machine learning methods.
+		I have a broad range of interests and have published widely in health systems research, digital health, epidemiology and global health.
+		A full list of my publications can be found <a href="https://orcid.org/0000-0001-9709-7264"> here</a>.
+	</p>
+	<p>
+		I welcome inquiries from potential PhD students and researchers interested in collaborating in these areas.
+	</p>
+
+	<p>
+		I recently completed a clinical PhD at Imperial exploring methods and applications for clustering diseases and people with MLTC.
+		An overview of my PhD research along with supporting analytical codes, are available on my <a href="https://tbeaney.github.io/MMclustering/"> GitHub webpage</a>.
+	</p>
+
+
+	<p>
+		Before starting my PhD, I was Deputy Theme Lead for Digital Health in the NIHR Applied Research Collaboration Northwest London and
+		Clinical Research Fellow in the NIHR Patient Safety Translational Research Centre.
+		During this time, I contributed to an evaluation of the COVID Oximetry @home programme and led a quantitative evaluation of the impact of remote consultations on patients and staff during the pandemic.
+	</p>
+
+	<p>
+		I completed clinical training as an NIHR Academic Clinical Fellow at Imperial in 2021, gaining experience across primary and secondary care roles,
+		and working for public health and policy-focused organisations including NHS England, Public Health England and the King’s Fund.
+		My background also includes training as a statistician, having completed an MSc in Medical Statistics
+		at the London School of Hygiene and Tropical Medicine as an NIHR Research Methods Scholar in 2016.
+	</p>
+
+	<p>
+		Since 2017, I have acted as lead statistician, and since 2022, as a Trustee for  <a href="https://maymeasure.org">May Measurement Month (MMM)</a>, a global blood pressure awareness and screening campaign that
+		has screened over 7 million people worldwide.
+	</p>
+
+	<p>
+		<a class="twitter-timeline" href="https://twitter.com/drtombeaney?ref_src=twsrc%5Etfw">Tweets by drtombeaney</a>
+		<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+	</p>
+
 </body>
 </html>
